<resources>
    <string name="app_name">My App Portfolio</string>

    <string name="action_settings">Settings</string>
    <string name="main_heading">My Nanodegree Apps!</string>
    <string name="app_spotify">SPOTIFY STREAMER</string>
    <string name="app_scores">SCORES APP</string>
    <string name="app_library">LIBRARY APP</string>
    <string name="app_buildit">BUILD IT BIGGER</string>
    <string name="app_reader">XYZ READER</string>
    <string name="app_capstone">CAPSTONE: MY OWN APP</string>
    <string name="hint_spotify">Spotify Streamer</string>
    <string name="hint_scores">Football Scores</string>
    <string name="hint_library">Library</string>
    <string name="hint_buildit">Build It Bigger</string>
    <string name="hint_reader">XYZ Reader</string>
    <string name="hint_capstone">Capstone</string>
</resources>
