<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">

    <TextView android:text="@string/main_heading" android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:id="@+id/text_heading"
        android:autoText="true"
        android:textSize="20dp" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_alignParentStart="false"
        android:layout_alignParentLeft="false"
        android:layout_below="@+id/text_heading"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="50dp">

        <Button
            android:text="@string/app_spotify"
            android:id="@+id/button_spotify"
            android:layout_below="@+id/text_heading"
            style="@style/button_style"
            android:hint="@string/hint_spotify" />

        <Button
            android:text="@string/app_scores"
            android:id="@+id/button_scores"
            android:layout_below="@+id/button_spotify"
            style="@style/button_style"
            android:hint="@string/hint_scores" />

        <Button
            android:text="@string/app_library"
            android:id="@+id/button_library"
            android:layout_below="@+id/button_scores"
            style="@style/button_style"
            android:hint="@string/hint_library" />

        <Button
            android:text="@string/app_buildit"
            android:id="@+id/button_buildit"
            android:layout_below="@+id/button_library"
            style="@style/button_style"
            android:hint="@string/hint_buildit" />

        <Button
            android:text="@string/app_reader"
            android:id="@+id/button_reader"
            android:layout_below="@+id/button_buildit"
            style="@style/button_style"
            android:hint="@string/hint_reader" />

        <Button
            android:text="@string/app_capstone"
            android:id="@+id/button_capstone"
            android:layout_below="@+id/button_reader"
            android:background="@android:color/holo_red_light"
            android:textColor="@android:color/white"
            style="@style/button_style"
            android:onClick="buttonClicked"
            android:hint="@string/hint_capstone" />
    </LinearLayout>

</RelativeLayout>
